# claude-code-game-master

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/commands/: create-character.md  dm.md  enhance.md  help.md  import.md  new-game.md  reset.md  setup.md  world-check.md
.claude/workflows/: class-intros.md  cognitive-rendering.md
docs/: import-guide.md  import-system-deep-dive.md  python-modules-api.md  schema-reference.md
features/loot/static/: loot_tables_by_rarity.json
lib/: agent_extractor.py  create-area.md
tools/: benchmark-hybrid.sh  dm-campaign.sh  dm-condition.sh  dm-consequence.sh  dm-enhance.sh  dm-extract.sh  dm-location.sh  dm-migrate-campaigns.sh  dm-note.sh  dm-npc.sh  dm-overview.sh  dm-player.sh  dm-plot.sh  dm-reset.sh  dm-search.sh  dm-session.sh  dm-time.sh
